--- a/several levels/Info.plist
+++ b/several levels/Info.plist
@@ -36,5 +36,20 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+	    <key>NSExceptionDomains</key>
+	    <dict>
+	        <key>yourdomain.com</key>
+	        <dict>
+	            <key>NSExceptionAllowsInsecureHTTPLoads</key>
+	            <true/>
+	            <key>NSExceptionMinimumTLSVersion</key>
+	            <string>TLSv1.1</string>
+	            <key>NSIncludesSubdomains</key>
+	            <true/>
+	        </dict>
+	    </dict>
+	</dict>
 </dict>
 </plist>
