--- a/several levels/Info.plist
+++ b/several levels/Info.plist
@@ -40,7 +40,7 @@
 	<dict>
 	    <key>NSExceptionDomains</key>
 	    <dict>
-	        <key>yourdomain.com</key>
+	        <key>severallevels.io</key>
 	        <dict>
 	            <key>NSExceptionAllowsInsecureHTTPLoads</key>
 	            <true/>
