working front page with categories set to tutorials

--- a/several levels/Info.plist
+++ b/several levels/Info.plist
@@ -38,18 +38,8 @@
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	    <key>NSExceptionDomains</key>
-	    <dict>
-	        <key>severallevels.io</key>
-	        <dict>
-	            <key>NSExceptionAllowsInsecureHTTPLoads</key>
-	            <true/>
-	            <key>NSExceptionMinimumTLSVersion</key>
-	            <string>TLSv1.1</string>
-	            <key>NSIncludesSubdomains</key>
-	            <true/>
-	        </dict>
-	    </dict>
+    	<key>NSAllowsArbitraryLoads</key>
+    	<true/>
 	</dict>
 </dict>
 </plist>
